tests/compile_fail/on_enum.rs
use structly::Structly;

#[derive(Structly)]
enum Demo {
    A,
    B,
}

fn main() {}
