tests/compile_fail/on_enum.stderr
error: only structs are supported
 --> tests/compile_fail/on_enum.rs:4:6
  |
4 | enum Demo {
  |      ^^^^
